h2. Version 0.1

    * delivery date : ???
    * developer(s)  : bourdon.ugo@gmail.com
    * features      :
        ** async API with 'com.ning % async-http-client' implementation
        ** GET request
        ** POST request
        ** Cookies handling (bugs with maxAge, secure & version parameters)
        ** scala docs on public def for AsyncHttpClient class
        ** timeout handling
        ** Header handling

h2. Version 0.2

    * delivery date : ???
        * developer(s)  : bourdon.ugo@gmail.com
        * features      :
            ** SSL handling
            ** use AsyncHttpClientConfig.Builder() for AsyncHttpClient constructor (enabled all config properties of java AsyncHttpClient)