@@ -20,12 +20,10 @@ object SimplyScalaHttpBuild extends Build {
             resolvers += "Sonatype OSS Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots",
 
             libraryDependencies ++= Seq(
-                "com.ning"       % "async-http-client"   % "1.7.19",
+                "com.ning"                 % "async-http-client"   % "1.7.19",
 
-                "org.scalatest" %% "scalatest"          % "1.9.1"     % "test",
-                "com.github.simplyscala"   %% "simplyscala-server" % "0.5-SNAPSHOT"     % "test"/*,
-                "com.twitter"              %% "finagle-core"       % "6.5.2"   % "test",
-                "com.twitter"              %% "finagle-http"       % "6.5.2"   % "test"*/
+                "org.scalatest"            %% "scalatest"          % "1.9.1"     % "test",
+                "com.github.simplyscala"   %% "simplyscala-server" % "0.5"       % "test"
             ),
 
             publishMavenStyle := true,
