@@ -10,6 +10,8 @@ h2. Version 0.1
         ** scala docs on public def for AsyncHttpClient class
         ** timeout handling
         ** Header handling
+        ** PUT request
+        ** HEAD request
 
 h2. Version 0.2
 
@@ -18,3 +20,4 @@ h2. Version 0.2
         * features      :
             ** SSL handling
             ** use AsyncHttpClientConfig.Builder() for AsyncHttpClient constructor (enabled all config properties of java AsyncHttpClient)
+            ** online scala doc
